--- a/css/style.css
+++ b/css/style.css
@@ -225,25 +225,27 @@ body {
 .search {
   border: none;
   width: 568px;
-  background-color: #503e33;
+  background-color: #766357;
   color: #ffffff;
   padding: 31px 70px;
   font-weight: 700;
   font-size: 21px;
   text-transform: uppercase;
-  opacity: 0.5;
 }
 
 .search:hover {
-  opacity: 1;
+  background-color: #604e43;
 }
 
 .search:active {
-  opacity: 0.7;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #503e33;
 }
 
 .search-form {
   position: absolute;
+  display: flex;
+  flex-wrap: wrap;
   top: 86px;
   left: 50%;
   transform: translateX(-50%);
@@ -252,7 +254,7 @@ body {
   padding: 37px 57px;
 }
 
-.search-date {
+/*.search-date {
   display: flex;
   height: 21px;
   width: 100%;
@@ -331,6 +333,98 @@ margin-left: 28px;
 }
 .sum-correct .button-plus{
   left: 150px;
+}*/
+
+.pop-up-input {
+  width: 100%;
+  background-color: #f2f2f2;
+  border: 0px;
+  padding: 10px;
+  font-weight: 700;
+  margin-left: 10px;
+}
+.pop-up-input:hover {
+  background-color: #ebebeb;
+}
+.pop-up-input:focus{
+  background-color: transparent;
+  outline: 2px solid #e5e5e5;
+
+}
+.order-date,
+.order-number{
+  display:inherit
+}
+.order-date label,
+.order-number label {
+  padding-top: 8px;
+}
+.order-date{
+  margin: 18px 0 13px;
+  width: 430px;
+}
+
+.order-number{
+  margin: 20px 0 55px;
+  width: 160px;
+}
+.date-container{
+  margin-left: 12px;
+  position: relative;
+  flex-grow: 1;
+}
+.container-correct {
+  margin-left: 16px;
+}
+.number-container{
+  position: relative;
+  margin-left: 30px;
+}
+.number-container .pop-up-input{
+  width: 95px;
+  text-align: center;
+}
+.number-correct {
+  margin-left: 120px;
+}
+.number-correct .number-container{
+  margin-left: 17px;
+}
+.button-plus,
+.button-minus{
+  position: absolute;
+  border: none;
+  background-color: transparent;
+  fill: #cacaca;
+}
+.button-plus{
+  top:10px;
+  right:16px;
+}
+
+.date-button:hover,
+.button-plus:hover,
+.button-minus:hover {
+  fill: #000000;
+}
+
+.date-button:active,
+.button-plus:active,
+.button-minus:active {
+  fill: #81b3d2;
+}
+
+.button-minus{
+  top:10px;
+  left: 26px;
+}
+.date-button{
+  position: absolute;
+  top: 6px;
+  right: -25px;
+  border: none;
+  background-color: transparent;
+  fill: #cacaca;
 }
 .find-button {
   border: none;
@@ -381,15 +475,31 @@ margin-left: 28px;
 
 .social-icon {
   display: block;
-  height: 46px;
+  height: 48px;
   width: 46px;
   background-color: #81b3d2;
   background-repeat: no-repeat;
   background-position: center;
   margin-left: 6px;
+  fill: #fff;
 }
-
+.social-icon:hover{
+  background-color: #669ec0;
+}
+.social-icon:active{
+  fill-opacity: 0.3;
+  background-color: #5496bd;
+}
 .twitter {
+  margin-top: 17px;
+}
+.youtube {
+  margin-top: 16px;
+}
+.facebook {
+  margin: 13px 0;
+}
+/*.twitter { !!!так как там прозрачность только у свг-шки пришлось вставлять в html!!!
   background-image: url("../img/twitter.svg");
   margin: 0;
 }
@@ -400,7 +510,7 @@ margin-left: 28px;
 
 .youtube {
   background-image: url("../img/youtube.svg");
-}
+}*/
 
 .academy {
   display: flex;
@@ -417,33 +527,41 @@ margin-left: 28px;
   width: 110px;
   padding-top: 25px;
   padding-left: 7px;
+  fill: #231f20;
 }
 
+.academy-link:hover {
+  fill: #81b3d2;
+}
+.academy-link:active {
+  fill: #bdbbbc;
+}
 .detail {
-  background-color: #669ec0;
+  background-color: #81b3d2;
   color: #ffffff;
   padding: 5px 17px;
-  opacity: 0.7;
+
 }
 
 .detail:hover {
-  opacity: 1;
+  background-color: #669ec0;
 }
 .detail:active {
-  opacity: 0.5;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #5496bd;
 }
 
 .order {
-  background-color: #604e43;
   color: #ffffff;
+  background-color: #766357;
   padding: 5px 17px;
-  opacity: 0.7;
 }
 .order:hover {
-  opacity: 1;
+  background-color: #604e43;
 }
 .order:active {
-  opacity: 0.5;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #503e33;
 }
 .filter {
   background-image: url("../img/background-main.jpg");
@@ -665,7 +783,7 @@ margin-left: 28px;
 
 .typical-sorting .link {
   color: #cacaca;
-  text-decoration: #81b3d2 dotted underline;
+  border-bottom: 1px #81b3d2 dotted;
   font-weight: 400;
   margin-right: 33px;
 }
@@ -676,7 +794,7 @@ margin-left: 28px;
 
 .typical-sorting .link:active {
   color: #000000;
-  text-decoration: none;
+  border-bottom: none;
 }
 
 .typical-sorting:active+:visited {
@@ -700,12 +818,23 @@ margin-left: 28px;
   width: 12px;
   height: 10px;
   margin-left: 13px;
+  fill: #cacaca;
+}
+
+.sort-button:hover {
+  fill: #231f20;
+}
+.sort-button:active {
+  fill: #81b3d2;
+}
+.sort-button-container .active {
+  fill: #81b3d2;
 }
 
 .button-container {
   display: flex;
-
 }
+
 .button-item {
   margin-right: 5px;
 }
@@ -741,6 +870,9 @@ margin-left: 28px;
 .check-input:checked~.check-on{/*понять бы почему предидущий выбать нельзя, да заново пройду курс*/
   display: block;
 }
+.check-input:checked~.check-off{
+  display: none;
+}
 .check-input:disabled~.check-on,
 .check-input:disabled~.check-off{
   fill: #6a6a6a;
@@ -750,12 +882,7 @@ margin-left: 28px;
   display: flex;
   justify-content: space-between;
 }
-.up-button{
-  fill: #ffb600;
-}
-.up-button:hover{
-  fill: black;
-}
+
 .stars {
   display: block;
   width: 18px;
@@ -784,7 +911,3 @@ margin-left: 28px;
 .one-star {
   width: 18px;
 }
-
-
-
-
