--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,20 @@ body {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: -40px 0 #dedede, 40px 0 #dedede;
-}
+  box-shadow: -1px 0 #dbdbdb, 1px 0 #dbdbdb,
+              -2px 0 #dedede, 2px 0 #dedede,
+              -3px 0 #e1e1e1, 3px 0 #e1e1e1,
+              -4px 0 #e4e4e4, 4px 0 #e4e4e4,
+              -5px 0 #e7e7e7, 5px 0 #e7e7e7,
+              -6px 0 #e9e9e9, 6px 0 #e9e9e9,
+              -7px 0 #eaeaea, 7px 0 #eaeaea,
+              -8px 0 #ececec, 8px 0 #ececec,
+              -9px 0 #ededed, 9px 0 #ededed,
+              -10px 0 #efefef, 10px 0 #efefef,
+              -11px 0 #f0f0f0, 11px 0 #f0f0f0,
+              -13px 0 #f1f1f1, 13px 0 #f1f1f1,
+              -40px 0 #f2f2f2, 40px 0 #f2f2f2;
+ }
 
 .navigation-container {
   position: relative;
@@ -33,10 +45,8 @@ body {
 
 .site-navigation {
   display: flex;
-
   align-items: center;
   padding: 0;
-
 }
 
 .nav-item {
@@ -141,14 +151,13 @@ body {
 .number-reason {
   display: flex;
   justify-content: space-around;
-  background-color: #cacaca;
+  background-color: #eeeeee;
 }
 
 .reason-title {
   font-size: 21px;
   padding: 0 70px;
 }
-
 
 .marked {
   background-color: #81b3d2;
@@ -217,8 +226,6 @@ body {
   padding: 6px 0;
 }
 
-
-
 .pop-up-form {
   position: relative;
   font-weight: 700;
@@ -256,87 +263,6 @@ body {
   padding: 37px 55px;
 }
 
-/*.search-date {
-  display: flex;
-  height: 21px;
-  width: 100%;
-  margin: 19px 0 46px;
-
-}
-.search-sum-container {
-  display: flex;
-  justify-content: space-between;
-
-}
-
-.search-sum{
-  position: relative;
-  display: flex;
-  height: 21px;
-  margin: 0 0 67px -2px;
-}
-
-.search-sum .pop-up-input{
-  width: 85px;
-  margin-left: 40px;
-  text-align: center;
-  height: 0;
-}
-.sum-correct .pop-up-input{
-margin-left: 28px;
-}
-
-
-.date-container {
-  display: flex;
-  flex-grow: 1;
-  position: relative;
-  margin-left: 26px;
-}
-
-.date-correct{
-  margin-left: 30px;
-}
-
-.search-form label{
-  padding-top: 9px;
-}
-
-.date-button {
-  position: absolute;
-  top: 3px;
-  right: 0;
-}
-
-.pop-up-input {
-  width: 100%;
-  background: #f2f2f2;
-  border: 0px;
-  padding: 19px 15px;
-  font-weight: 700;
-}
-
-.sum-button,.date-button {
-  position: absolute;
-  background-color: transparent;
-  border: none;
-}
-.sum-button{
-  top: 50%;
-}
-.button-minus{
-  left: 125px;
-}
-.button-plus{
-  left: 195px;
-}
-.sum-correct .button-minus{
-  left: 80px;
-}
-.sum-correct .button-plus{
-  left: 150px;
-}*/
-
 .pop-up-input {
   width: 100%;
   background-color: #f2f2f2;
@@ -346,64 +272,76 @@ margin-left: 28px;
   margin-left: 10px;
   text-transform: uppercase;
 }
+
 .pop-up-input:hover {
   background-color: #ebebeb;
 }
-.pop-up-input:focus{
+
+.pop-up-input:focus {
   background-color: transparent;
   outline: 2px solid #e5e5e5;
+}
 
+.search-date,
+.search-sum {
+  display: inherit;
 }
-.order-date,
-.order-number{
-  display:inherit
-}
-.order-date label,
-.order-number label {
+
+.search-date label,
+.search-sum label {
   padding-top: 9px;
 }
-.order-date label{
+
+.search-date label {
   padding-left: 2px;
 }
-.order-date{
+
+.search-date {
   margin: 18px 0 11px;
   width: 430px;
 }
 
-.order-number{
+.search-sum {
   margin: 19px 0 54px;
   width: 160px;
 }
-.date-container{
-  margin-left: 10px;
+
+.date-container {
   position: relative;
+  margin-left: 10px;
   flex-grow: 1;
 }
+
 .container-correct {
   margin-left: 13px;
 }
-.number-container{
+
+.sum-container {
   position: relative;
   margin-left: 32px;
 }
-.number-container .pop-up-input{
+
+.sum-container .pop-up-input{
   width: 94px;
   text-align: center;
 }
+
 .number-correct {
   margin-left: 120px;
 }
-.number-correct .number-container{
+.number-correct .sum-container {
   margin-left: 17px;
 }
+
 .button-plus,
-.button-minus{
+.button-minus {
   position: absolute;
   border: none;
   background-color: transparent;
   fill: #cacaca;
 }
-.button-plus{
+
+.button-plus {
   top:11px;
   right: 9px;
 }
@@ -420,11 +358,11 @@ margin-left: 28px;
   fill: #81b3d2;
 }
 
-.button-minus{
+.button-minus {
   top: 11px;
   left: 17px;
 }
-.date-button{
+.date-button {
   position: absolute;
   top: 6px;
   right: -25px;
@@ -432,6 +370,7 @@ margin-left: 28px;
   background-color: transparent;
   fill: #cacaca;
 }
+
 .find-button {
   border: none;
   width: 458px;
@@ -444,6 +383,7 @@ margin-left: 28px;
   margin: 0 auto;
   margin-bottom: 20px;
 }
+
 .find-button:hover {
   background-color: #669ec0;
 }
@@ -458,7 +398,7 @@ margin-left: 28px;
   height: 470px;
 }
 
-.footer {
+.footer-wrap {
   display: flex;
 }
 
@@ -490,23 +430,28 @@ margin-left: 28px;
   margin-left: 6px;
   fill: #fff;
 }
-.social-icon:hover{
+.social-icon:hover {
   background-color: #669ec0;
 }
-.social-icon:active{
+
+.social-icon:active {
   fill-opacity: 0.3;
   background-color: #5496bd;
 }
+
 .twitter {
   margin-top: 17px;
   margin-left: 1px;
 }
+
 .youtube {
   margin-top: 16px;
 }
+
 .facebook {
   margin: 13px 0;
 }
+
 /*.twitter { !!!так как там прозрачность только у свг-шки пришлось вставлять в html!!!
   background-image: url("../img/twitter.svg");
   margin: 0;
@@ -548,12 +493,12 @@ margin-left: 28px;
   background-color: #81b3d2;
   color: #ffffff;
   padding: 5px 17px;
-
 }
 
 .detail:hover {
   background-color: #669ec0;
 }
+
 .detail:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #5496bd;
@@ -564,29 +509,37 @@ margin-left: 28px;
   background-color: #766357;
   padding: 5px 17px;
 }
+
 .order:hover {
   background-color: #604e43;
 }
+
 .order:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #503e33;
 }
+
 .filter {
   position: relative;
 }
-.filter::before{
+
+.filter::before {
   content: "";
   position: absolute;
-  left: 0; right: 0; top: 0; bottom: 0;
+  left: 0; 
+  right: 0; 
+  top: 0;
+  bottom: 0;
   background-color: #81b6d6;
   background-image: url("../img/background-main.jpg");
   background-size: 1200px;
   background-position: center;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-   filter: blur(5px);
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  filter: blur(10px);
   z-index: -1;
 }
+
 .user-filter {
   display: flex;
   justify-content: space-between;
@@ -594,9 +547,11 @@ margin-left: 28px;
   font-size: 16px;
   color: #ffffff;
 }
-.resting-kind{
+
+.resting-kind {
   height: 456px;
 }
+
 .resting-place {
   display: flex;
   justify-content: space-between;
@@ -667,17 +622,14 @@ margin-left: 28px;
   position: absolute;
   top: 50%;
   left: 50%;
-
   width: 2px;
   height: 22px;
-
   background: #ffffff;
   transform: translate(-50%, -50%);
 }
 
 .price-controls label {
   display: inline-block;
-
   font-size: 14px;
   line-height: 32px;
   vertical-align: top;
@@ -688,9 +640,7 @@ margin-left: 28px;
 .price-controls .min-price,
 .price-controls .max-price {
   width: 90px;
-
   padding-left: 55px;
-
 }
 
 .price-controls input {
@@ -698,27 +648,23 @@ margin-left: 28px;
   margin: 0;
   color: inherit;
   font: inherit;
-
   background: none;
   border: none;
 }
 
 .range-controls {
   position: relative;
-
   margin-bottom: 32px;
 }
 
 .range-controls .scale {
   height: 2px;
-
   background: rgba(255, 255, 255, 0.3);
 }
 
 .range-controls .bar {
   width: 80%;
   height: 2px;
-
   background: #ffffff;
 }
 
@@ -728,7 +674,6 @@ margin-left: 28px;
   padding: 2px;
   width: 4px;
   height: 4px;
-
   background: #ababab;
   border: 8px solid #ffffff;
   border-radius: 50%;
@@ -752,12 +697,10 @@ margin-left: 28px;
   display: block;
   margin: 0 85px;
   padding: 6px 34px;
-
   font-size: 14px;
   line-height: 20px;
   color: #ffffff;
   text-transform: uppercase;
-
   background: transparent;
   border: 2px solid #ffffff;
   border-radius: 2px;
@@ -766,7 +709,6 @@ margin-left: 28px;
 
 .btn-transparent:hover {
   color: #000000;
-
   background: #ffffff;
 }
 
@@ -774,7 +716,6 @@ margin-left: 28px;
   border: none;
   text-align: left;
   margin-right: 92px;
-
 }
 
 .checkbox-title {
@@ -846,9 +787,11 @@ margin-left: 28px;
 .sort-button:hover {
   fill: #231f20;
 }
+
 .sort-button:active {
   fill: #81b3d2;
 }
+
 .sort-button-container .active {
   fill: #81b3d2;
 }
@@ -879,34 +822,40 @@ margin-left: 28px;
   display: block;
   margin-bottom: 25px;
 }
-.check-button{
+
+.check-button {
   position: absolute;
 }
-.check-button{
- fill: #ffffff;
 
+.check-button {
+ fill: #ffffff;
 }
-.check-on{
+
+.check-on {
   display: none;
 }
-.check-input:checked~.check-on{/*понять бы почему предидущий выбать нельзя, да заново пройду курс*/
+
+.check-input:checked~.check-on {
   display: block;
 }
-.check-input:checked~.check-off{
+
+.check-input:checked~.check-off {
   display: none;
 }
+
 .check-input:disabled~.check-on,
-.check-input:disabled~.check-off{
+.check-input:disabled~.check-off {
   fill: #6a6a6a;
 }
+
 .check-container {
   width: 380px;
   display: flex;
 }
 
-.number-raiting{
+.number-raiting {
   padding: 3px 10px;
-  background-color: #cacaca;
+  background-color: #f2f2f2;
 }
 
 .stars {
