--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   font-weight: 400;
   color: #000000;
   text-transform: uppercase;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   text-align: center;
 }
 
@@ -15,19 +15,8 @@ body {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: -1px 0 #dbdbdb, 1px 0 #dbdbdb,
-              -2px 0 #dedede, 2px 0 #dedede,
-              -3px 0 #e1e1e1, 3px 0 #e1e1e1,
-              -4px 0 #e4e4e4, 4px 0 #e4e4e4,
-              -5px 0 #e7e7e7, 5px 0 #e7e7e7,
-              -6px 0 #e9e9e9, 6px 0 #e9e9e9,
-              -7px 0 #eaeaea, 7px 0 #eaeaea,
-              -8px 0 #ececec, 8px 0 #ececec,
-              -9px 0 #ededed, 9px 0 #ededed,
-              -10px 0 #efefef, 10px 0 #efefef,
-              -11px 0 #f0f0f0, 11px 0 #f0f0f0,
-              -13px 0 #f1f1f1, 13px 0 #f1f1f1,
-              -40px 0 #f2f2f2, 40px 0 #f2f2f2;
+  box-shadow: 15px 0px 5px 0px rgba(0,1,1,0.2);
+  background-color: #fff;
  }
 
 .navigation-container {
@@ -52,11 +41,11 @@ body {
 .nav-item {
   text-align: right;
   width: 110px;
-  margin: 17px 0;
+  padding: 17px 0;
 }
 
 .nav-item:first-child {
-  margin-left: 71px;
+  margin-left: 72px;
   text-align: left;
 }
 
@@ -79,7 +68,7 @@ body {
   color: #000000;
 }
 
-.nav-item .link:active+:visited {
+.nav-item .link:active + :visited {
   opacity: 0.7;
   color: #000000;
 }
@@ -266,7 +255,7 @@ body {
 .pop-up-input {
   width: 100%;
   background-color: #f2f2f2;
-  border: 0px;
+  border: 0;
   padding: 11px 10px;
   font-weight: 700;
   margin-left: 10px;
@@ -321,7 +310,7 @@ body {
   margin-left: 32px;
 }
 
-.sum-container .pop-up-input{
+.sum-container .pop-up-input {
   width: 94px;
   text-align: center;
 }
@@ -337,6 +326,7 @@ body {
 .button-minus {
   position: absolute;
   border: none;
+  outline: none;
   background-color: transparent;
   fill: #cacaca;
 }
@@ -367,6 +357,7 @@ body {
   top: 6px;
   right: -25px;
   border: none;
+  outline: none;
   background-color: transparent;
   fill: #cacaca;
 }
@@ -408,15 +399,15 @@ body {
   font-size: 21px;
   line-height: 32px;
   text-align: left;
-  margin-left: 125px;
+  margin-left: 129px;
   margin-top: 25px;
 }
 
 .social-link {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 173px;
-  margin-right: 228px;
+  margin-left: 169px;
+  margin-right: 227px;
   margin-top: 33px;
 }
 
@@ -424,46 +415,39 @@ body {
   display: block;
   height: 48px;
   width: 46px;
-  background-color: #81b3d2;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color: #81b3d2; 
   margin-left: 6px;
-  fill: #fff;
+}
+
+.social-icon::before {
+  content: "";
+  display: block;
+  height: 48px;
+  width: 46px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .social-icon:hover {
   background-color: #669ec0;
 }
-
+.social-icon:active::before{
+  opacity: 0.3;
+}
 .social-icon:active {
-  fill-opacity: 0.3;
   background-color: #5496bd;
 }
 
-.twitter {
-  margin-top: 17px;
-  margin-left: 1px;
-}
-
-.youtube {
-  margin-top: 16px;
-}
-
-.facebook {
-  margin: 13px 0;
-}
-
-/*.twitter { !!!так как там прозрачность только у свг-шки пришлось вставлять в html!!!
+.twitter::before {
   background-image: url("../img/twitter.svg");
-  margin: 0;
 }
 
-.facebook {
+.facebook::before {
   background-image: url("../img/fb-icon.svg");
 }
 
-.youtube {
+.youtube::before {
   background-image: url("../img/youtube.svg");
-}*/
+}
 
 .academy {
   display: flex;
@@ -471,7 +455,7 @@ body {
   margin-top: 0px;
 }
 
-.footer-text{
+.footer-text {
   padding-top: 3px;
 }
 
@@ -486,13 +470,15 @@ body {
 .academy-link:hover {
   fill: #81b3d2;
 }
+
 .academy-link:active {
   fill: #bdbbbc;
 }
+
 .detail {
   background-color: #81b3d2;
   color: #ffffff;
-  padding: 5px 17px;
+  padding: 4px 18px 5px 17px;
 }
 
 .detail:hover {
@@ -507,7 +493,7 @@ body {
 .order {
   color: #ffffff;
   background-color: #766357;
-  padding: 5px 17px;
+  padding: 4px 18px 5px;
 }
 
 .order:hover {
@@ -520,43 +506,26 @@ body {
 }
 
 .filter {
-  position: relative;
-}
-
-.filter::before {
-  content: "";
-  position: absolute;
-  left: 0; 
-  right: 0; 
-  top: 0;
-  bottom: 0;
-  background-color: #81b6d6;
-  background-image: url("../img/background-main.jpg");
+  background-image: url("../img/img-blur.jpg");
   background-size: 1200px;
   background-position: center;
-  -webkit-filter: blur(10px);
-  -moz-filter: blur(10px);
-  filter: blur(10px);
-  z-index: -1;
 }
 
 .user-filter {
   display: flex;
   justify-content: space-between;
-  padding: 27px  58px 0;
+  padding: 28px  58px 0;
   font-size: 16px;
   color: #ffffff;
 }
-
-.resting-kind {
-  height: 456px;
+.resting-kind{
+  margin-bottom: 2px;
 }
-
 .resting-place {
   display: flex;
   justify-content: space-between;
   border-top: 1px solid #cacaca;
-  padding: 27px 72px 17px;
+  padding: 26px 73px 17px 72px;
 }
 
 .resting-place:last-child {
@@ -568,7 +537,7 @@ body {
 }
 
 .images {
-  margin-top: 2px;
+  margin-top: 3px;
   margin-right: 30px;
 }
 
@@ -609,7 +578,6 @@ body {
 
 .price-controls {
   position: relative;
-
   height: 36px;
   margin-bottom: 18px;
   font-size: 0;
@@ -720,13 +688,13 @@ body {
 
 .checkbox-title {
   font-weight: 700;
-  padding-bottom: 19px;
+  padding-bottom: 18px;
   color: #ffffff;
 }
 
 .typical-sorting {
   display: flex;
-  padding-top: 30px;
+  margin: auto 0;
   font-size: 12px;
 }
 
@@ -734,13 +702,12 @@ body {
   font-size: 21px;
   font-weight: 700;
   margin-right: 53px;
-  margin-top: 29px;
+  margin-top: 32px;
   margin-bottom: 34px;
 }
 
 .sort-transfer {
-  padding-top: 20px;
-  margin-right: 40px;
+  margin: auto 40px auto 0;
   font-size: 12px;
 }
 
@@ -760,27 +727,27 @@ body {
   border-bottom: none;
 }
 
-.typical-sorting:active+:visited {
+.typical-sorting:active + :visited {
   color: #81b3d2;
   text-decoration: none;
 }
 
 .sort {
   display: flex;
-  padding: 0 70px;
+  padding: 0 72px;
 }
 
 .sort-button-container {
   display: flex;
-  padding-top: 31px;
-  margin-left: auto;
+  margin: auto 1px auto auto;
 }
 
 .sort-button {
   display: block;
   width: 12px;
   height: 10px;
-  margin-left: 13px;
+  margin-left: 11px;
+  margin-bottom: 7px;
   fill: #cacaca;
 }
 
@@ -801,7 +768,7 @@ body {
 }
 
 .button-item {
-  margin-right: 5px;
+  margin-right: 6px;
 }
 
 .check-input {
@@ -810,10 +777,6 @@ body {
   height: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0);
-}
-
-.check-input::-ms-expand {
-  display: none;
 }
 
 .check {
@@ -825,7 +788,9 @@ body {
 .filter li{
   margin-bottom: 25px;
 }
-
+.filter li:last-child{
+  margin-bottom: 22px;
+}
 .check-button {
   position: absolute;
   top: 0;
@@ -839,27 +804,29 @@ body {
 .check .check-on {
   display: none;
 }
-
-.check-input:checked+.check .check-on {
+.check-input:focus + .check .check-button{
+  border: 4px solid #0078d4;
+  border-radius: 25%;
+}
+.check-input:checked + .check .check-on {
   display: block;
 }
 
-.check-input:checked+.check .check-off {
+.check-input:checked + .check .check-off {
   display: none;
 }
 
-.check-input:disabled+.check .check-on,
-.check-input:disabled+.check .check-off {
+.check-input:disabled + .check .check-on,
+.check-input:disabled + .check .check-off {
   fill: #6a6a6a;
 }
 
 .check-container {
-  width: 380px;
   display: flex;
 }
 
 .number-raiting {
-  padding: 3px 10px;
+  padding: 4px 13px 2px 16px;
   background-color: #f2f2f2;
 }
 
@@ -871,7 +838,7 @@ body {
   margin-left: auto;
   background-repeat: repeat-x;
   margin-top: 0;
-  margin-bottom: 48px;
+  margin-bottom: 49px;
 }
 
 .five-stars {
