--- a/css/style.css
+++ b/css/style.css
@@ -793,7 +793,7 @@ body {
 }
 .check-button {
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 0;
 }
 
@@ -804,9 +804,8 @@ body {
 .check .check-on {
   display: none;
 }
-.check-input:focus + .check .check-button{
-  border: 4px solid #0078d4;
-  border-radius: 25%;
+.check-input:focus + .check {
+  box-shadow: 0 0 0 3px #0078d4;
 }
 .check-input:checked + .check .check-on {
   display: block;
