--- a/css/style.css
+++ b/css/style.css
@@ -64,13 +64,11 @@ body {
 }
 
 .nav-item .link:active {
-  opacity: 0.5;
-  color: #000000;
+  color: rgba(0, 0, 0, 0.5);
 }
 
-.nav-item .link:active + :visited {
-  opacity: 0.7;
-  color: #000000;
+.nav-item .link .active {
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .link {
@@ -187,8 +185,7 @@ body {
 }
 
 .food::before {
-  background-image: url("../img/icon-3.svg");
-  
+  background-image: url("../img/icon-3.svg");  
 }
 
 .souvenir::before {
@@ -318,6 +315,7 @@ body {
 .number-correct {
   margin-left: 120px;
 }
+
 .number-correct .sum-container {
   margin-left: 17px;
 }
@@ -427,12 +425,15 @@ body {
   background-position: center;
   background-repeat: no-repeat;
 }
+
 .social-icon:hover {
   background-color: #669ec0;
 }
+
 .social-icon:active::before{
   opacity: 0.3;
 }
+
 .social-icon:active {
   background-color: #5496bd;
 }
@@ -518,9 +519,11 @@ body {
   font-size: 16px;
   color: #ffffff;
 }
+
 .resting-kind{
   margin-bottom: 2px;
 }
+
 .resting-place {
   display: flex;
   justify-content: space-between;
@@ -788,9 +791,11 @@ body {
 .filter li{
   margin-bottom: 25px;
 }
+
 .filter li:last-child{
   margin-bottom: 22px;
 }
+
 .check-button {
   position: absolute;
   top: -1px;
@@ -804,9 +809,11 @@ body {
 .check .check-on {
   display: none;
 }
+
 .check-input:focus + .check {
-  box-shadow: 0 0 0 3px #0078d4;
+  box-shadow: 0 0 0 3px #0078d4;/*чтобы было видно что на него можно прейти с клавиатуры*/
 }
+
 .check-input:checked + .check .check-on {
   display: block;
 }
@@ -838,6 +845,7 @@ body {
   background-repeat: repeat-x;
   margin-top: 0;
   margin-bottom: 49px;
+  font-size: 0;/*подпись для читалок есть, а на странице не видно*/
 }
 
 .five-stars {
