--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ body {
 
 .other-reasons {
   padding-top: 26px;
-  padding-bottom: 47px;
+  padding-bottom: 46px;
   width: 255px;
 }
 
@@ -246,7 +246,7 @@ body {
   transform: translateX(-50%);
   width: 460px;
   background-color: #ffffff;
-  padding: 37px 55px;
+  padding: 37px 55px 35px;
 }
 
 .pop-up-input {
@@ -384,7 +384,7 @@ body {
 
 .map {
   width: 1200px;
-  height: 470px;
+  height: 472px;
 }
 
 .footer-wrap {
@@ -398,7 +398,7 @@ body {
   line-height: 32px;
   text-align: left;
   padding-left: 124px;
-  padding-top: 4px;
+  padding-top: 2px;
 }
 
 .social-link {
@@ -406,7 +406,7 @@ body {
   flex-wrap: wrap;
   padding-left: 174px;
   padding-right: 227px;
-  padding-top: 33px;
+  padding-top: 31px;
 }
 
 .social-icon {
@@ -463,7 +463,7 @@ body {
 .academy-link {
   display: block;
   width: 113px;
-  padding-top: 8px;
+  padding-top: 7px;
   padding-left: 10px;
   fill: #231f20;
 }
@@ -878,5 +878,5 @@ body {
 }
 .other-reasons-correct{
   margin-bottom: 0;
-  padding-bottom: 6px;
+  padding-bottom: 7px;
 }
