--- a/css/style.css
+++ b/css/style.css
@@ -867,8 +867,11 @@ body {
   width: 18px;
 }
 
-.modal-hide {
+.modal-container {
   display: none;
+}
+.modal-show {
+  display: block;
 }
 
 .other-reasons-fix {
