Смена чек боксов

--- a/css/style.css
+++ b/css/style.css
@@ -818,20 +818,21 @@ body {
   display: none;
 }
 
-.check-input:focus + .check {
+.check + .check-input:focus {
+  display: block;
   box-shadow: 0 0 0 3px #0078d4;
 }
 
-.check-input:checked + .check .check-on {
+.check-input:checked ~ .check-on {
   display: block;
 }
 
-.check-input:checked + .check .check-off {
+.check-input:checked ~ .check-off {
   display: none;
 }
 
-.check-input:disabled + .check .check-on,
-.check-input:disabled + .check .check-off {
+.check-input:disabled ~ .check-on,
+.check-input:disabled ~ .check-off {
   fill: #6a6a6a;
 }
 
