--- a/css/style.css
+++ b/css/style.css
@@ -908,6 +908,23 @@ body {
   padding-bottom: 7px;
 }
 
+.modal-container {
+  animation-name: bounce;
+  animation-duration: 0.6s;
+}
+
+@keyframes bounce {
+  0% {transform: translateY(-2000px);}
+  70% {transform: translateY(30px);}
+  90% {transform: translateY(-10px);}
+  100% {transform: translateY(0);}
+}
+
+.modal-error {
+  animation-name: shake;
+  animation-duration: 0.6s;
+}
+
 @keyframes shake {
   0%, 100% { transform: translateX(0); }
 
@@ -916,7 +933,3 @@ body {
   20%, 40%, 60%, 80% { transform: translateX(10px); }
 }
 
-.modal-error {
-  animation-name: shake;
-  animation-duration: 0.6s;
-}
