--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body {
   padding: 17px 71px 18px ;
   text-align: left;
 }
+
 .nav-item:nth-child(3) {
   margin-left: auto;
 }
@@ -226,6 +227,7 @@ body {
   font-size: 21px;
   text-transform: uppercase;
 }
+
 .pop-up-input::-webkit-input-placeholder { /* Edge */
   color: #000000;
 }
@@ -394,11 +396,6 @@ body {
   background-color:  #5496bd;
 }
 
-.map {
-  width: 1200px;
-  height: 473px;
-}
-
 .footer-wrap {
   display: flex;
 }
@@ -472,9 +469,11 @@ body {
   display: flex;
   padding-top: 20px;
 }
+
 .academy-footer{
   padding-top: 23px;
 }
+
 .academy-link {
   height: 67px;
   width: 115px;
@@ -910,19 +909,24 @@ body {
 
 .modal-container {
   animation-name: bounce;
-  animation-duration: 0.6s;
+  animation-duration: 2s;
+  animation-delay: -0.9s;
 }
 
 @keyframes bounce {
-  0% {transform: translateY(-2000px);}
-  70% {transform: translateY(30px);}
-  90% {transform: translateY(-10px);}
-  100% {transform: translateY(0);}
+  0% { transform: translateY(-2000px); }
+
+  70% { transform: translateY(30px); }
+
+  90% { transform: translateY(-10px); }
+
+  100% { transform: translateY(0); }
 }
 
 .modal-error {
   animation-name: shake;
-  animation-duration: 0.6s;
+  animation-duration: 1.6s;
+
 }
 
 @keyframes shake {
